# FK2021

./: .gitignore  G0-K07.ipynb  G0-K6.ipynb  G1-K03.ipynb  G1-K04.ipynb  G1-K05.ipynb  G1-K06.ipynb  G1-K07.ipynb  G2-K03.ipynb  G2-K04.ipynb  G2-K05.ipynb  G2-K06.ipynb  G2-K07.ipynb  README.md  group_phase_velocity.ipynb  pyproject.toml  tutorial-nppltsp.ipynb  tutorial-python.ipynb
